[package]
name = "ace-gl-types"
version = "0.1.0"
authors = ["Evan Merlock <vnmrlck@gmail.com>"]
edition = "2018"
build = "build.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
image = "0.23.4"
tobj = "2.0.1"
nalgebra-glm = "0.7.0"
nalgebra = { version = "0.21.0" }

[build-dependencies]
gl_generator = "0.14.0"