[package]
name = "asset-management"
version = "0.1.0"
authors = ["Evan Merlock <vnmrlck@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ace-gl-types = { path = "../ace-gl-types" }
image = "0.23.4"
tobj = "2.0.1"
nalgebra-glm = "0.7.0"
nalgebra = { version = "0.21.0" }